--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -27,7 +27,7 @@
         <item
             android:id="@+id/Cupboard_Fridge"
             android:icon="@drawable/fridge"
-            android:title="Cupboard & Fridge" />
+            android:title="Cupboard and Fridge" />
         <item
             android:id="@+id/nav_tools"
             android:icon="@drawable/tools"
