--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,8 +9,8 @@
         style="@style/Widget.AppCompat.Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="addChorebtOnClick"
-        android:text="@string/button" />
+        android:text="@string/button"
+        tools:text="Add a task" />
 
     <Switch
         android:id="@+id/showTask"
