--- a/app/src/main/res/layout/fragment_tab3.xml
+++ b/app/src/main/res/layout/fragment_tab3.xml
@@ -5,10 +5,8 @@
     tools:context="ca.uottawa.leyaoli.seg2105_final_project.Tab3">
 
 
-    <TextView
+    <ListView
+        android:id="@+id/listv1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        tools:text="3" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
