--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -22,7 +22,7 @@
             android:id="@+id/radioButton2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/loblaws"
+            android:text="@string/lablaws"
             android:textSize="18sp" />
 
         <RadioButton
@@ -50,7 +50,7 @@
             android:id="@+id/radioButton6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/t_and_t"
+            android:text="@string/t_t"
             android:textSize="18sp" />
 
         <RadioButton
