--- a/app/src/main/res/layout/people_layout.xml
+++ b/app/src/main/res/layout/people_layout.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight">
 
 
@@ -16,14 +18,14 @@
             android:id="@+id/icon"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginRight="6dp"
+            android:layout_gravity="left|center_vertical"
             android:layout_margin="6dp"
-            android:layout_marginLeft="6dp"
-            android:layout_marginTop="6dp"
             android:layout_marginBottom="6dp"
-
-            android:contentDescription="Avatar"
-            android:layout_gravity="left|center_vertical" />
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            app:srcCompat="@drawable/avatar" />
+            android:layout_marginTop="6dp"
+            android:contentDescription="Avatar" />
 
         <LinearLayout
             android:orientation="vertical"
