--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -24,4 +24,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="56dp"
         android:text="@string/register_bt" />
+
+    <Button
+        android:id="@+id/Sign_In"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/textView4"
+        android:layout_marginBottom="33dp"
+        android:text="Sign In" />
 </RelativeLayout>
