--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -8,5 +8,5 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/lang_cn"
-        android:title="TBD" />
+        android:title="All User" />
 </menu>
