--- a/app/src/main/res/layout/activity_personal_file.xml
+++ b/app/src/main/res/layout/activity_personal_file.xml
@@ -105,7 +105,7 @@
             <ImageView
                 android:id="@+id/imageView8"
                 android:layout_width="85dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/avatar" />
 
