--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,45 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/register_wallpaper">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/registerName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="221dp"
+        android:layout_height="168dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:gravity="bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="hint" />
+            android:background="@color/common_google_signin_btn_text_dark_disabled"
+            android:gravity="center"
+            android:hint="User Name"
+            android:singleLine="true"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
+            android:textColorHint="@color/common_google_signin_btn_text_dark_default" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/registerEmail"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:gravity="bottom">
 
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="hint" />
+                android:background="@color/common_google_signin_btn_text_dark_disabled"
+                android:gravity="center"
+                android:hint="Email Address"
+                android:inputType="textEmailAddress"
+                android:singleLine="true"
+                android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/registerPassword"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:gravity="bottom">
 
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="hint" />
+                    android:background="@color/common_google_signin_btn_text_dark_disabled"
+                    android:gravity="center"
+                    android:hint="Password"
+                    android:singleLine="true"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default"
+                    android:textColorHint="@color/common_google_signin_btn_text_dark_default" />
+
+                <Space
+                    android:layout_width="11dp"
+                    android:layout_height="13dp"
+                    android:layout_weight="1" />
 
                 <Button
                     android:id="@+id/resgisterButton2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="29dp"
+                    android:layout_height="29dp"
+                    android:layout_gravity="center"
                     android:layout_weight="1"
-                    android:text="Button" />
+                    android:background="@drawable/register_check1"
+                    android:gravity="center" />
+
+                <Space
+                    android:layout_width="11dp"
+                    android:layout_height="13dp"
+                    android:layout_weight="1" />
+
             </android.support.design.widget.TextInputLayout>
+
         </android.support.design.widget.TextInputLayout>
     </android.support.design.widget.TextInputLayout>
 </android.support.constraint.ConstraintLayout>
