--- a/app/src/main/res/layout/fragment_tab3.xml
+++ b/app/src/main/res/layout/fragment_tab3.xml
@@ -5,8 +5,8 @@
     tools:context="ca.uottawa.leyaoli.seg2105_final_project.Tab3">
 
 
-    <ListView
-        android:id="@+id/listv1"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycle1"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
