--- a/app/src/main/res/layout/people_layout.xml
+++ b/app/src/main/res/layout/people_layout.xml
@@ -69,7 +69,7 @@
             android:layout_marginLeft="6dp"
             android:layout_marginRight="6dp"
             android:layout_marginTop="6dp"
-            android:background="@android:color/holo_blue_light"
+            android:background="@android:drawable/sym_action_call"
             android:contentDescription="checkMark"
             tools:background="@android:drawable/sym_action_chat"
             tools:ignore="HardcodedText" />
