--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -16,8 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="createNewTasks"
-            android:text="@string/button"
-            tools:text="Add a task" />
+            android:text="@string/add_new_task" />
 
         <Button
             android:id="@+id/refresh"
