Update People Layout UI

--- a/app/src/main/res/layout/activity_add_chore.xml
+++ b/app/src/main/res/layout/activity_add_chore.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/project_name"
+            android:hint="@string/name_of_task"
             android:inputType="textPersonName"
             android:textColor="@android:color/black"
             android:textColorHint="@android:color/black"
